Salesforce/main/default/objects/Planejamento_Difusao_Supervisor_Item__c/Planejamento_Difusao_Supervisor_Item__c.object-meta.xml
<CustomObject>
    <label>Planejamento Difusão Supervisor Item</label>
    <nameField>
        <label>Nome de Planejamento Difusão Supervisor Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planejamento Difusão Supervisor Itens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>