Salesforce/main/default/objects/Planejamento_Difusao_Supervisor_Item__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Planejamento Difusão Supervisor Itens</relationshipLabel>
    <relationshipName>Planejamento_Difusao_Supervisor_Itens</relationshipName>
    <type>Lookup</type>
</CustomField>