Salesforce/main/default/objects/Planejamento_Difusao_Supervisor_Item__c/fields/Cultivar__c.field-meta.xml
<CustomField>
    <fullName>Cultivar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultivar</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Product2.Obtentor__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Planejamento Difusão Supervisor Itens</relationshipLabel>
    <relationshipName>Planejamento_Difusao_Supervisor_Itens</relationshipName>
    <type>Lookup</type>
</CustomField>