Salesforce/main/default/objects/Planejamento_Difusao_Supervisor_Item__c/fields/Geo_Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Geo_Localizacao__c</fullName>
    <label>Geo Localização</label>
    <scale>14</scale>
    <type>Location</type>
</CustomField>