Salesforce/main/default/objects/Planejamento_Difusao_Supervisor_Item__c/fields/Micro__c.field-meta.xml
<CustomField>
    <fullName>Micro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Micro</label>
    <referenceTo>Micro_UF__c</referenceTo>
    <relationshipLabel>Planejamento Difusão Supervisor Itens</relationshipLabel>
    <relationshipName>Planejamento_Difusao_Supervisor_Itens</relationshipName>
    <type>Lookup</type>
</CustomField>