Salesforce/main/default/objects/Planejamento_Difusao_Supervisor_Item__c/fields/Planejamento_Difusao_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Planejamento_Difusao_Supervisor__c</fullName>
    <label>Planejamento Difusão Supervisor</label>
    <referenceTo>Planejamento_Difusao_Supervisor__c</referenceTo>
    <relationshipLabel>Planejamento Difusão Supervisor Itens</relationshipLabel>
    <relationshipName>Planejamento_Difusao_Supervisor_Itens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>